Testing scrollbar fix for DT-2203

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -237,7 +237,7 @@ button,
 .home-page body.edit .template-container,
 .blog-page body.edit .template-container {
     @media @tablet-860px {
-        overflow-x: scroll;
+        overflow: scroll;
     }
 }
 
